[metadata]
name = Arduino-Serial-Reciever
version = 1.0
author = Joel Garcia
author_email= joel.garcia1202@hotmail.com
description = Data reciever from an Arduino and Sender to a Server
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/Shaking-Hands-Overseas/Arduino-Serial-Reciever
license = MIT

[options]
packages = find:
include_package_data=True
install_requires = [
    'pyserial'
]